# toy-compiler

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  test.ac  test.ac.ic  test.c  toy_c_compiler.cbp
app/: main.cc
awesomeCC/: CMakeLists.txt  all_api.h  encapsulation.h  error.cc  error.h  interpreter.cc  lexical_analyzer.cc  lexical_analyzer.h  main.cc  syntax_analyzer.cc  syntax_analyzer.h  test.cc  token.h
awesomeCC/back-end/: backend_api.h  main.cc
awesomeCC/back-end/include/: interpreter.h
awesomeCC/back-end/src/: interpreter.cc
awesomeCC/front-end/: frontend_api.h
awesomeCC/front-end/include/: inter_code_generator.h  lexical_analyzer.h  syntax_analyzer.h
awesomeCC/front-end/src/: inter_code_generator.cc  lexical_analyzer.cc  syntax_analyzer.cc
awesomeCC/include/: error.h  file_tools.h  lexical_analyzer.h  str_tools.h  strtools.h  syntax_analyzer.h  token.h
awesomeCC/lib/include/: error.h  file_tools.h  quadruple.h  str_tools.h  syntax_tree.h  token.h
awesomeCC/lib/src/: error.cc  quadruple.cc  syntax_tree.cc  token.cc
awesomeCC/src/: error.cc  lexical_analyzer.cc  syntax_analyzer.cc  token.cc
awesomeCC_test/: CMakeLists.txt
awesomeCC_test/basic_test/: CMakeLists.txt  basic_test.cc  strtools_test.cc  token.cc
demo/: acc  bubble_sort.ac  bubble_sort.ac.ic  bubble_sort.c  error_demo1.ac  error_demo2.ac  fact.ac  fact.ac.ic  fibonnachi.ac  fibonnachi.ac.ic  fibonnachi.c  hello_world.ac  hello_world.c  leap_year.ac  leap_year.ac.ic  leap_year.c  leap_year_simple.ac  leap_year_simple.ac.ic  qsort.ac  qsort.ac.ic  qsort.c  sum.ac  sum.c
llcc/: CMakeLists.txt  all_api.h  main.cc
llcc/back-end/: backend_api.h  main.cc
llcc/back-end/include/: interpreter.h
llcc/back-end/src/: interpreter.cc
llcc/front-end/: frontend_api.h
llcc/front-end/include/: inter_code_generator.h  lexical_analyzer.h  syntax_analyzer.h
llcc/front-end/src/: inter_code_generator.cc  lexical_analyzer.cc  syntax_analyzer.cc
llcc/lib/include/: error.h  file_tools.h  quadruple.h  str_tools.h  syntax_tree.h  token.h
llcc/lib/src/: syntax_tree.cc  token.cc
src/: error.cc  error.cpp  error.h  error.hpp  lexical_analyzer.cc  lexical_analyzer.cpp  lexical_analyzer.h  lexical_analyzer.hpp  main.cc  main.cpp  syntax_analyzer.cc  syntax_analyzer.cpp  syntax_analyzer.h  syntax_analyzer.hpp  token.cc  token.cpp  token.h  token.hpp
